--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400&display=swap");
-
+@import url("http://fonts.cdnfonts.com/css/pokemon-solid");
 * {
   box-sizing: border-box;
 }
@@ -7,7 +6,7 @@
 body {
   background: linear-gradient(to right, #d4d3dd, #efefbb);
   background-color: #efefbb;
-  font-family: "Lato", sans-serif;
+  font-family: "Pokemon solid", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,6 +34,7 @@ h1 {
   margin: 10px;
   padding: 20px;
   text-align: center;
+  letter-spacing: 1px;
 }
 
 .pokemon .img-container {
